--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,51 @@
 * {
     margin: 0;
 }
+
+
+
+html {font-size: 16px;}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: false;
+  line-height: 1.65;
+}
+
+p {
+  font-size: 1em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: true;
+  line-height: 1.15;
+}
+
+.text-size-h1 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  margin-top: 0;
+  font-size: 2.49em;
+}
+
+.text-size-h2 { font-size: 2.07em; }
+
+.text-size-h3 { font-size: 1.73em; }
+
+.text-size-h4 { font-size: 1.44em; }
+
+.text-size-h5 { font-size: 1.2em; }
+
+.text-caption { font-size: 0.83em; }
+
+small,
+.text-small {
+  font-size: 0.69em;
+}
+              
+                
