--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
     margin: 0;
 }
@@ -7,45 +9,107 @@
 html {font-size: 16px;}
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: false;
-  line-height: 1.65;
+  background-color: #171717;
+}
+
+.text-color-white {
+    color: white;
+}
+
+.text-color-blu {
+    color: #2F41E2;
+}
+
+.text-center {
+    text-align: center;
 }
 
 p {
   font-size: 1em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: true;
-  line-height: 1.15;
-}
-
 .text-size-h1 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   margin-top: 0;
-  font-size: 2.49em;
+  font-size: 3.05em;
 }
 
-.text-size-h2 { font-size: 2.07em; }
+.text-size-h2 { font-size: 2.44em; }
 
-.text-size-h3 { font-size: 1.73em; }
+.text-size-h3 { font-size: 1.95em; }
 
-.text-size-h4 { font-size: 1.44em; }
+.text-size-h4 { font-size: 1.56em; }
 
-.text-size-h5 { font-size: 1.2em; }
+.text-size-h5 { font-size: 1.25em; }
 
-.text-caption { font-size: 0.83em; }
+.text-caption { font-size: 0.8em; }
 
-small,
 .text-small {
-  font-size: 0.69em;
+  font-size: 0.64em;
+}
+
+.heading {
+    line-height: 1.1em;
+    letter-spacing: -.04em;
+}
+
+.text {
+    line-height: 1.5em;
+}
+
+.container {
+    padding: 8px 16px;
+}
+
+.card {
+    background-color: #232D3F;
+    width: 30%;
+    border-radius: 24px;
+    transition: 0.3s;
+}
+
+.card img {
+    width: 100%;
+    max-height: 260px;
+    border-radius: 24px;
+}
+
+.card:hover {
+    background-color: #005B41;
+}
+
+.section-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    gap: 32px;
+}
+
+.section-hero span {
+    transition: 0.3s;
+}
+
+.section-hero span:hover {
+    color: #005B41;
+}
+
+.section-cards {
+    padding-right: 32px;
+    padding-left: 32px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.section-cards .card .container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 16px;
 }
               
                 
