--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@ p {
 
 .card img {
     width: 100%;
-    max-height: 260px;
+    height: 260px;
     border-radius: 24px;
     object-fit: cover;
 }
